[gd_scene load_steps=5 format=3 uid="uid://b5e2gy13n7b05"]

[ext_resource type="Script" path="res://Weapons/Missile.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://bgsnr75luc3su" path="res://Resources/Images/missile.png" id="2_dm5sl"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(12.0688, 31.995)

[sub_resource type="Gradient" id="Gradient_ffdd2"]
offsets = PackedFloat32Array(0, 0.486667, 0.846667, 1)
colors = PackedColorArray(1, 0.930672, 0.603624, 1, 0.846291, 0.448436, 0.261273, 1, 0, 0, 0, 1, 0, 0, 0, 0)

[node name="HomingMissile" type="Area2D" groups=["MISSILES"]]
script = ExtResource("1")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_dm5sl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.00012207, -0.999786)
scale = Vector2(0.5, 0.5)
shape = SubResource("1")

[node name="Lifetime" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[node name="DetectionRange" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="DetectionRange"]
position = Vector2(8, 0)
polygon = PackedVector2Array(-136, 64, -168, -96, -72, -192, 56, -192, 152, -96, 120, 64, -8, 8)

[node name="FrontThruster" type="CPUParticles2D" parent="."]
position = Vector2(0.157166, 8.99863)
amount = 16
speed_scale = 8.0
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector2(0, 1)
spread = 2.0
gravity = Vector2(0, 0)
initial_velocity_max = 64.0
color_ramp = SubResource("Gradient_ffdd2")

[connection signal="body_entered" from="." to="." method="_on_ProjectileHoming_body_entered"]
[connection signal="timeout" from="Lifetime" to="." method="_on_Lifetime_timeout"]
